# reelname

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  codespell.txt  demo.tape  pyproject.toml  tox.ini
.github/workflows/: automerge-pre-commit.yml  automerge.yml  dependabot-automerge.yml  main.yml  pre-commit-automerge.yml  pre-commit-autoupdate.yml  precommit-autoupdate.yml  release.yml  vhs-pr-comment.yml  vhs.yml
reelname/: __init__.py  _version.py  cli.py  constants.py  exceptions.py  reelname.py  utils.py
tests/: data.py  test_cli.py  test_reelname.py  test_utils.py
